# showmemutil

./: README.md  pyproject.toml
showmemutil/: showmemutil.py
