[tool.poetry]
name = "showmemutil"
version = "0.1.1"
description = "Show memory utilization in the terminal (sort of like htop)"
authors = ["Vikram Saraph <vikram.saraph.22@gmail.com>"]
license = "MIT"
repository = "https://github.com/vhxs/showmemutil"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
